# two_medium_aircraft

./: .gitignore  CMakeLists.txt  README.md
results/: atmosphere.txt
src/: Atmosphere.cpp  Atmosphere.hpp  CMakeLists.txt  input.txt  main.cpp  utils.cpp  utils.hpp
src/data/: density.json  molar_mass.json  molar_temperature.json  pressure.json
src/libs/alglib-cpp/include/alglib-cpp/: alglibinternal.h  alglibmisc.h  ap.h  dataanalysis.h  diffequations.h  fasttransforms.h  integration.h  interpolation.h  kernels_avx2.h  kernels_fma.h  kernels_sse2.h  linalg.h  minlp.h  optimization.h  solvers.h  specialfunctions.h  statistics.h
src/libs/alglib-cpp/src/: alglibinternal.cpp  alglibmisc.cpp  ap.cpp  dataanalysis.cpp  diffequations.cpp  fasttransforms.cpp  integration.cpp  interpolation.cpp  kernels_avx2.cpp  kernels_fma.cpp  kernels_sse2.cpp  linalg.cpp  minlp.cpp  solvers.cpp  specialfunctions.cpp  statistics.cpp
src/libs/gplot++/: gplot++.h
tests/: CMakeLists.txt  test_Atmosphere.cpp  test_utils.cpp
